Added J2ME Platform specification version check; J2ME platform selection from UI